# projeto-diabetes

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  ORGANIZATION_SUMMARY.md  README.md  diabetes_dataset.xlsx  diabetes_prediction.ipynb  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: config.yaml
docs/: PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_VISUAL.md  QUICKSTART.md  README.md
mlruns/0/: meta.yaml
mlruns/0/1496d2506c2e41c29c335d3231cb2c0b/: meta.yaml
mlruns/0/1496d2506c2e41c29c335d3231cb2c0b/metrics/: test_accuracy  test_f1_score  test_precision  test_recall  test_roc_auc  train_accuracy  train_f1_score  train_precision  train_recall
mlruns/0/6ac39f5e40fb420a8477d43e1016c7d8/: meta.yaml
mlruns/0/6ac39f5e40fb420a8477d43e1016c7d8/metrics/: test_accuracy  test_f1_score  test_precision  test_recall  test_roc_auc  train_accuracy  train_f1_score  train_precision  train_recall
mlruns/0/6cc958b3569545259f1973f01febef0f/: meta.yaml
mlruns/0/6cc958b3569545259f1973f01febef0f/metrics/: test_accuracy  test_f1_score  test_precision  test_recall  test_roc_auc  train_accuracy  train_f1_score  train_precision  train_recall
mlruns/0/72c8b8edd5dc44ed8856d6fa248aa6ec/: meta.yaml
mlruns/0/72c8b8edd5dc44ed8856d6fa248aa6ec/metrics/: test_accuracy  test_f1_score  test_precision  test_recall  test_roc_auc  train_accuracy  train_f1_score  train_recall  (+1 more)
mlruns/0/97bbdd32d273406f9e9eb1868a197dfe/: meta.yaml
mlruns/821144617228344950/: meta.yaml
mlruns/821144617228344950/1cc3ff0f7de04a3291c4016aec5968b0/: meta.yaml
mlruns/821144617228344950/49eed28e0e5b4a839e8e7d9a3feea118/: meta.yaml
mlruns/821144617228344950/88d20e4feb96424682d9a9aee493ead1/: meta.yaml
mlruns/821144617228344950/ae7b8ca8c1e046979ec49b5485b633cf/: meta.yaml
mlruns/821144617228344950/eb53fa9f2f1b4a6f9d48357797307e3b/: meta.yaml
models/: knn.pkl  logistic_regression.pkl  random_forest.pkl  scaler.pkl  svm.pkl  xgboost.pkl
notebooks/: diabetes_prediction.ipynb
scripts/: streamlit_app.py  train.py
src/: __init__.py
src/data/: load_data.py  preprocessing.py
src/models/: evaluate.py  train.py
src/utils/: config.py  logging_config.py
tests/: __init__.py  test_data.py  test_models.py
(+182 files in other folders)
